<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icono_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_busquedaAvanzada"
            android:icon="@drawable/icono_busquedaavanzada"
            android:title="@string/menu_busquedaAvanzada" />
        <item
            android:id="@+id/nav_categorias"
            android:icon="@drawable/icono_categorias"
            android:title="@string/menu_categorias" />
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/icono_favorito"
            android:title="@string/menu_favoritos" />
        <item
            android:id="@+id/nav_reservas"
            android:icon="@drawable/icono_reservas"
            android:title="@string/menu_reservas" />

        <item
            android:id="@+id/nav_detalles"
            android:icon="@drawable/icono_reservas"
            android:title="Detalles" />
    </group>
</menu>