<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.unex.navdrawertraining.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_busquedaAvanzada"
        android:name="es.unex.navdrawertraining.ui.busquedaavanzada.BusquedaAvanzadaFragment"
        android:label="@string/menu_busquedaAvanzada"
        tools:layout="@layout/fragment_busqueda_avanzada" />

    <fragment
        android:id="@+id/nav_categorias"
        android:name="es.unex.navdrawertraining.ui.categorias.CategoriasFragment"
        android:label="@string/menu_categorias"
        tools:layout="@layout/fragment_categorias" />

    <fragment
        android:id="@+id/nav_favoritos"
        android:name="es.unex.navdrawertraining.ui.favoritos.FavoritosFragment"
        android:label="@string/menu_favoritos"
        tools:layout="@layout/fragment_favoritos" />

    <fragment
        android:id="@+id/nav_reservas"
        android:name="es.unex.navdrawertraining.ui.reservas.ReservasFragment"
        android:label="@string/menu_reservas"
        tools:layout="@layout/fragment_reservas" />
    <fragment
        android:id="@+id/nav_detalles"
        android:name="es.unex.navdrawertraining.ui.detalles.DetallesFragment"
        android:label="Detalles"
        tools:layout="@layout/fragment_detalles" />
</navigation>