<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="SpeakableTextPresentCheck">




            <ImageView
                android:id="@+id/iv_backgroundLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_launcher_background" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/icono_nofav50"
                app:tint="#CA0000"
                android:background="?android:selectableItemBackground"
                android:padding="10dp"/>
            <ImageView
                android:id="@+id/iv_logoLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/purple_200"
                android:padding="3dp"
                app:layout_constraintBottom_toBottomOf="@id/iv_backgroundLocal"
                app:layout_constraintEnd_toEndOf="@id/iv_backgroundLocal"
                app:layout_constraintStart_toStartOf="@id/iv_backgroundLocal"
                android:src="@drawable/ic_launcher_foreground" />
            <TextView
                android:id="@+id/tv_nombreLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="TITULO DEL SITIO"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_backgroundLocal" />
            <TextView
                android:id="@+id/tv_aforo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/tv_nombreLocal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:text="Aforo"
                android:textSize="25dp"/>
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                style="@style/CircularDeterminateProgressBar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_aforo"
                tools:progress="90" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
                app:layout_constraintEnd_toEndOf="@+id/progress_bar"
                app:layout_constraintStart_toStartOf="@+id/progress_bar"
                app:layout_constraintTop_toBottomOf="@+id/tv_aforo"
                android:text="85%"
                android:textSize="20dp"/>

            <Button
                android:id="@+id/b_valoracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/progress_bar"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="60dp"

                android:text="@string/valorar"/>

            <Button
                android:id="@+id/b_comentario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/progress_bar"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="60dp"
                android:text="@string/comentar"/>

            <TextView
                android:id="@+id/tv_titulo_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/b_comentario"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="30dp"
                android:text="@string/descripcion_local"
                android:layout_marginTop="20dp"
                android:textSize="25dp"/>
            <TextView
                android:id="@+id/tv_descipcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_titulo_desc"
                android:text="@string/lorem_ipsum"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="20dp"
                android:justificationMode="inter_word"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        app:srcCompat="@drawable/icono_reservas" />
</androidx.constraintlayout.widget.ConstraintLayout>